Kubernetes/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-deployment
spec:
  replicas: 2  # Number of pod replicas
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
        - name: backend
          image: blainmac333/qr-code-api:latest  # Use your Docker Hub image
          ports:
            - containerPort: 8000  # FastAPI default port
