Kubernetes/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-deployment
spec:
  replicas: 2  # Number of pod replicas
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
        - name: frontend
          image: blainmac333/qr-code-frontend:latest  # Use your Docker Hub image
          ports:
            - containerPort: 3000  # Adjust if needed
